Added full test configuration